syntax = "proto3";

package ai.lzy.v1.channel;

import "ai/lzy/v1/common/slot.proto";
import "ai/lzy/v1/channel/channel.proto";

option java_outer_classname = "LCMPS";
option java_package = "ai.lzy.v1.channel";

service LzyChannelManagerPrivate {
  rpc Create (ChannelCreateRequest) returns (ChannelCreateResponse);
  rpc Destroy (ChannelDestroyRequest) returns (ChannelDestroyResponse);
  rpc DestroyAll (ChannelDestroyAllRequest) returns (ChannelDestroyAllResponse);
  rpc Status (ChannelStatusRequest) returns (ChannelStatus);
  rpc StatusAll (ChannelStatusAllRequest) returns (ChannelStatusList);
}

message ChannelCreateRequest {
  ChannelSpec channelSpec = 1;
  string executionId = 2;
}

message ChannelCreateResponse {
  string channelId = 1;
}

message ChannelDestroyRequest {
  string channelId = 1;
}

message ChannelDestroyResponse {}

message ChannelDestroyAllRequest {
  string executionId = 1;
}

message ChannelDestroyAllResponse {}

message ChannelStatusRequest {
  string channelId = 1;
}

message ChannelStatus {
  ChannelSpec channelSpec = 1;
  repeated SlotStatus connected = 2;
  string channelId = 3;
}

message ChannelStatusAllRequest {
  string executionId = 1;
}

message ChannelStatusList {
  repeated ChannelStatus statuses = 1;
}
